@@ -1,36 +1,32 @@
-# Sample .travis.yml for R projects.
-# Taken from my fork of Craig Citro's r-travis
-#
-# See https://github.com/eddelbuettel/r-travis/
-# and https://github.com/craigcitro/r-travis
-#
-# See README.md for instructions.
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
 
-env:
-  global:
-    - _R_CHECK_FORCE_SUGGESTS_=FALSE
+sudo: required
+
+dist: trusty
 
 before_install:
-  ## PPA for Rcpp and some other packages
-  - sudo add-apt-repository -y ppa:edd/misc
-  ## r-travis by Craig Citro et al
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
+  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  # optionally add our launchpad repo, but not needed here
+  # - sudo add-apt-repository -y ppa:edd/misc
+  - ./run.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget r-cran-rcpp
-
-script: 
-  - ./travis-tool.sh run_tests
+  - ./run.sh install_aptget r-cran-rcpp 
+  
+script:
+  - ./run.sh run_tests
 
 after_failure:
-  - ./travis-tool.sh dump_logs
+  - ./run.sh dump_logs
 
+after_success:
+  - ./run.sh coverage
+   
 notifications:
   email:
     on_success: change
     on_failure: change
-
+        
+    
