@@ -1,5 +1,7 @@
 2017-04-27  Dirk Eddelbuettel  <edd@debian.org>
 
+	* .travis.yml: Switch to using run.sh for Travis CI
+
 	* inst/include/RInsideCommon.h (HAVE_UINTPTR_T): Protect behind #ifndef
 
 2017-02-10  Dirk Eddelbuettel  <edd@debian.org>
